---------------------------
testresources release notes
---------------------------

IN DEVELOPMENT
--------------

0.2.4
-----

CHANGES
~~~~~~~

* Relicenced to BSD / Apache2.0 with full agreement of contributors.

IMPROVEMENTS
~~~~~~~~~~~~

* Substantially improved documentation in README. (mbp)

* Rename TestResource to TestResourceManager leaving TestResource as an alias.
  Fixes bug #520769.

* Test sorting no longer performs N! work on tests that can never benefit from
  order optimisations (when resources are not shared an arbitrary order is
  sufficient). Partial fix for bug #522338.

* Test sorting now uses a heuristic on each partition to get a sort that is
  no worse than twice the optimal number of setup/teardown operations and is
  fast to calculate. Fixes bug #522338

0.2.3
-----

CHANGES
~~~~~~~

IMPROVEMENTS
~~~~~~~~~~~~

* Distribute doc/*.py in the source tarball.

* New helper testresources.GenericResource which should remove the need for
  much boilerplate when using testresources with existing test fixtures.

BUG FIXES
~~~~~~~~~

API CHANGES
~~~~~~~~~~~

* New public functions testresources.setUpResources and
  testresources.tearDownResources for folk that cannot easily use
  ResourcedTestCase. Fixes bug #504146.

INTERNALS
~~~~~~~~~

0.2.2
-----

BUG FIXES
~~~~~~~~~

* OptimisingTestSuite.addTest was not unpacking OptimisingTestSuite instances.
  When using testresources.TestLoader to load tests this was generating an
  unoptimised layout, with each test in its own little suite, and no resource
  sharing happening.

0.2.1
------

A small bugfix release for compatibility with newer testtools.

INTERNALS
~~~~~~~~~

* One test case wasn't upcalling setUp properly, causing test failures with
  more recent testtools that check for this mistake.

0.2
---

  CHANGES:

    * testresources needs testtools to run the testresources test suite. You
      can still use testresources without using testtools. (Jonathan Lange)

  IMPROVEMENTS:
